--- a/react/src/App.css
+++ b/react/src/App.css
@@ -8,14 +8,20 @@
 .main {
     flex: 1;
     width: 100%;
-    max-width: 1400px;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 1rem 1rem 4rem 1rem;
+    padding: 1rem 2rem 4rem 2rem;
 }
 
 @media (min-width: 1200px) {
     .main {
-        padding: 1rem 2rem 4rem 2rem;
+        padding: 1rem 3rem 4rem 3rem;
+    }
+}
+
+@media (max-width: 900px) {
+    .main {
+        padding: 1rem 1rem 4rem 1rem;
     }
 }
 
