--- a/react/src/components/LyricsViewer.css
+++ b/react/src/components/LyricsViewer.css
@@ -29,6 +29,24 @@
     grid-auto-flow: row;
 }
 
+@media (min-width: 1800px) {
+    .lyrics-content {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (min-width: 2200px) {
+    .lyrics-content {
+        grid-template-columns: repeat(5, 1fr);
+    }
+}
+
+@media (min-width: 2600px) {
+    .lyrics-content {
+        grid-template-columns: repeat(6, 1fr);
+    }
+}
+
 @media (max-width: 1400px) {
     .lyrics-content {
         grid-template-columns: repeat(2, 1fr);
